2008-08-12  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.NowPlaying/Banshee.NowPlaying/VideoDisplay.cs:
	Fix a NRE in the cover art display when the ArtworkId for a track is null
	(BGO #547520).

2008-08-12  Aaron Bockover  <abock@gnome.org>

	Banshee 1.2.1 Released

2008-08-12  Aaron Bockover  <abock@gnome.org>

	* configure.ac: Bump version to 1.2.1

	* NEWS: Update

	* src/Extensions/Banshee.SqlDebugConsole/Makefile.am:
	* src/Extensions/Makefile.am: Fix build

2008-08-12  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Recommendations/RecommendationPane.cs:
	Fix bug where top album buttons tried to open the wrong URL.

2008-08-12  Aaron Bockover  <abock@gnome.org>

	* Revert: svn merge -r 4350:4349; backed out my large commit from yesterday
	due to some apparent internal windowing regressions experience by some;
	unfortunately no bling for 1.2.1, but I'll work to get it back into 1.2.2

2008-08-12  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.PlaybackController/PlaybackControllerService.cs:
	If there is no track loaded/playing and the user presses Play, if one or
	more items are selected, play the first intead of playing the first item
	in the source.

2008-08-12  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap/Banshee.Dap/DapSource.cs: Catch and log exceptions
	thrown while loading the device's items.

	* src/Core/Banshee.Services/Banshee.Collection/ImportManager.cs: Don't
	create the user job if it's just going to be hidden.  Avoid a NRE if the
	ImportElement already fired the Finished event and the job was destroyed.

	* src/Libraries/Hyena/Hyena.Collections/QueuePipelineElement.cs: Prevent
	NRE by making sure the element is threaded.  This and the above NRE fix
	should fix the bug with mass storage devices not getting loaded (BGO
	#545604).

2008-08-12  Gabriel Burt  <gabriel.burt@gmail.com>
